# lyrics

./: .gitignore  Cargo.toml  Containerfile  Justfile  readme.md  root
migrations/: 20250721001208_init.sql  20250723033531_genius_index.sql  20250723044419_songs_genius_id.sql
src/: error.rs  genius.rs  load.rs  main.rs  markov.rs  megalodon.rs  models.rs
