[package]
name = "mili-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
html-escape = "0.2.13"
html_editor = "0.7.0"
megalodon = "1.0.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
