[package]
name = "mili-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = { version = "0.6.5", default-features = false }
env_logger = "0.11.8"
html-escape = "0.2.13"
html_editor = "0.7.0"
log = "0.4.27"
megalodon = "1.0.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
